# platformer-game

./: CMakeLists.txt  main.cpp
Game/: Game.cpp  Game.hpp
Maps/: Items.cpp  Items.hpp  Key.cpp  Key.hpp  Maps.cpp  Maps.hpp  Portal.cpp  Portal.hpp  defaultMap.cpp  defaultMap.hpp  itemRoom.cpp  itemRoom.hpp
Maps/Enemies/: Enemy.cpp  Enemy.hpp  GhostEnemy.cpp  GhostEnemy.hpp  MirrorEnemy.cpp  MirrorEnemy.hpp  WalkingEnemy.cpp  WalkingEnemy.hpp
Maps/MapOne/: mapOne.cpp  mapOne.hpp
Maps/MapThree/: mapThree.cpp  mapThree.hpp
Maps/MapTwo/: mapTwo.cpp  mapTwo.hpp
Player/: Bullet.cpp  Bullet.hpp  Player.cpp  Player.hpp  TextureLoader.cpp  TextureLoader.hpp
